--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script>alert("WELCOME");alert("Created by @dzephyr_zoldyck")</script>
+<script>alert("WELCOME");alert("Created by @kyypau")</script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://badasstechie.github.io/lib/three/112.1/three.min.js"></script>
